<resources>
    <string name="app_name">Homies</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_signed_up">Already Signed-up?</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="placeHolderHouse1">House 1</string>
    <string name="queryHintSearch">Search for new houses</string>
    <string name="placeHolderHouse2">House 2</string>
    <string name="placeHolderHouse3">House 3</string>
    <string name="placeHolderHouse4">House 4</string>
    <string name="placeHolderHouse5">House 5</string>
    <string name="placeHolderHouse6">House 6</string>
    <string name="placeHolderHouse7">House 7</string>
    <string name="placeHolderHouse8">House 8</string>
    <string name="placeHolderHouse9">House 9</string>
    <string name="queryHintBookmark">Search bookmarked houses</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name: John Doe</string>
    <string name="age">Age: 20</string>
    <string name="phone">Phone: (647) 999 999</string>
    <string name="roommates">Roommates: 0</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="phone_hint">Phone</string>
    <string name="roommates_number_hint">Number of Roommates</string>
    <string name="submit">Save</string>
    <string name="messagesnonewmessages">No New Messages</string>
    <string name="editprofile_name">Name: \</string>
    <string name="editprofile_age">Age: \</string>
    <string name="editprofile_phone">Phone: \</string>
    <string name="editprofile_roomates">Roomates: \</string>
    <string name="editprofile_description">Description: \</string>
    <string name="Error1">FIELD CANNOT BE EMPTY</string>
    <string name="Error2">USERNAME SHOULD CONTAIN ATLEAST 2 CHARACTERS</string>
    <string name="Error3">THE PASSWORDS DO NOT MATCH</string>
    <string name="Error4">PASSWORD NEEDS TO CONTAIN MINIMUM 6 CHARACTERS</string>
    <string name="Error5">USERNAME ALREADY TAKEN</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="Error7">USERNAME DOES NOT EXIST</string>
    <string name="Exit_Confirmation">Are you sure you want to exit the application?</string>
    <string name="Yes">Yes</string>
    <string name="money_sign">$</string>
    <string name="back_press_tit">Exit</string>
    <string name="back_pres_neg">No</string>
    <string name="number_key_pref">phone_number</string>
    <string name="snack_bar_value">Replace with your own action</string>
    <string name="action_snack_bar">Action</string>
    <string name="bookmark_path_page_database">Bookmarked Houses</string>
    <string name="toast_onCanceled_bookmark">failed to get value</string>
    <string name="database_ref_search_gae" translatable="false">Houses</string>
    <string name="on_cancel_search_page_error">failed to get value</string>
    <string name="message_page_error">Please allow the call permissions</string>
    <string name="CallPermGranted">Call Permission Granted</string>
    <string name="CallPermDenied">Call Permission Denied</string>
    <string name="tel">tel:</string>
    <string name="contact_via">Contact Via</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="profileName">"Name: "</string>
    <string name="profileAge">"Age: "</string>
    <string name="profilePhone">"Phone: "</string>
    <string name="profileRoommates">"Roommates: "</string>
    <string name="msg_fail">Message Sent Failed</string>
    <string name="msg_success">Message Sent</string>
    <string name="msg_gen_fail">Generic failure</string>
    <string name="msg_no_service">No service</string>
    <string name="msg_null">Null PDU</string>
    <string name="msg_radio_off">Radio off</string>
    <string name="msg_delv">SMS delivered</string>
    <string name="sms_not_del">SMS not delivered</string>
    <string name="Error_Phone">ENTER A VALID PHONE NUMBER</string>
    <string name="signup_exit_confirmation">Are you sure you want to leave the signup page? All progress will be lost</string>
    <string name="nothing_found">Nothing found</string>
    <string name="Authentication_Failed">Authentication Failed.</string>
    <string name="Nothing_Found">Nothing found</string>
    <string name="facebook_app_id">225356762278805</string>
    <string name="fb_login_protocol_scheme">fb225356762278805</string>
    <string name="spinnerPrompt">Sort</string>
    <string name="Error_Age">ENTER A VALID AGE</string>
    <string name="Error_Roommates">ENTER A VALID NUMBER OF ROOMMATES</string>
    <string name="Appearance">Appearance</string>
    <string name="Enable_DarkMode">Enable Dark Mode</string>
    <string name="More_Information">More Information</string>
    <string name="about_us">About us</string>
    <string name="account_actions">Account Actions</string>
    <string name="logout">Logout</string>
    <string name="about_us_content">Currently there a lot of students (especially international students) struggling to find affordable housing near the college/university that they attend. Our application aims to combat that problem by allowing students to search for housing near their institutions, that also meet their requirements.</string>
    <string name="remember_details">Remember Details</string>
    <string name="add_house">ADD HOUSE</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="price">Price</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="to">To:</string>
    <string name="enter_message_max_200_words">Enter Message max 200 words</string>
    <string name="send">SEND</string>
    <string name="send_message">Send Message</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="havent_picked_image">You haven\'t picked an Image</string>
    <string name="bookmarks_welcome">Welcome to your Bookmarked Houses</string>
    <string name="Error_Username_Password">THE USERNAME AND PASSWORD DO NOT MATCH</string>
    <string name="NA">N/A</string>
    <string name="Error_Max_Length_160">Max Length 160</string>
    <string name="welcome_to_homies">Welcome to Homies</string>
    <string name="smthwentwrong">Something went wrong</string>
    <string name="pickimage">You haven\'t picked Image</string>
    <string name="removed">" removed"</string>
    <string name="emptysearchbar">Search bar must be empty to change sort</string>
    <string-array name="sortTypes">
        <item>Sort</item>
        <item>Price:Low to High</item>
        <item>Price:High to Low</item>
        <item>Alphabetical:A-Z</item>
        <item>Alphabetical:Z-A</item>
    </string-array>
</resources>