<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/Appearance">

    <SwitchPreference
        android:key="darkmodeSwitch"
        android:title="@string/Enable_DarkMode"
        android:defaultValue="false" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/More_Information">

        <Preference
            android:key="Aboutus"
            android:title="@string/about_us"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account_actions">

        <Preference
            android:key="Settings_Logout"
            android:title="@string/logout"

            />

    </PreferenceCategory>



</PreferenceScreen>