<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePic"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:hint="@string/name_hint" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserName"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:hint="@string/age_hint" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Age"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:hint="@string/phone_hint" />

    <EditText
        android:id="@+id/Roommates"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Phone"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:hint="@string/roommates_number_hint" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_below="@id/Roommates"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/background_light"
        android:hint="@string/description_hint"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Cardview2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/Description"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="20dp"
        android:onClick="Go_To_Profile"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

