<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:text="@string/add_house"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/House_pic"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_below="@id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/unbookmarked_house" />

    <EditText
        android:id="@+id/add_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Cardview2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/address"
        android:textSize="20sp"
        android:inputType="textPostalAddress"/>

    <EditText
        android:id="@+id/add_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_address"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:textSize="20sp"
        android:inputType="phone"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/add_price"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_number"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/price" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Cardview2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/House_pic"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="10dp"
        android:onClick="add_image"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Cardview3"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@id/add_price"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="10dp"
        android:onClick="new_house"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/delete_house_ed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Cardview3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:inputType="textPostalAddress"
        android:hint="or exact address" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardviewDelete"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/delete_house_ed"
        android:layout_toEndOf="@id/delete_house_ed"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="delete_house"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="delete"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>

